--- a/styles/scss/my-framework.scss
+++ b/styles/scss/my-framework.scss
@@ -37,10 +37,6 @@ a {
   justify-content: space-between;
 }
 
-.justify-content-center {
-  justify-content: center;
-}
-
 .justify-content-around {
   justify-content: space-around;
 }
@@ -63,6 +59,10 @@ a {
 
 .text-align-right {
   text-align: right;
+}
+
+.text-align-left {
+  text-align: left;
 }
 
 .m-0 {
@@ -284,6 +284,10 @@ a {
 
 .pl-271 {
   padding-left: 271px;
+}
+
+.pl-23 {
+  padding-left: 23px;
 }
 
 .py-118 {
