--- a/styles/scss/variables.scss
+++ b/styles/scss/variables.scss
@@ -79,7 +79,7 @@ $color-5f82ff: #5f82ff;
   background-color: $primary-color;
 }
 
-.bg-fsfdff {
+.bg-fcfdff {
   background-color: $color-fcfdff;
 }
 
